Bugzilla bug #21428: fixed LL_CMP and LL_UCMP so that they can be used with the <= and >= operators when HAVE_LONG_LONG is not defined.  The fix is contributed by John G. Myers <jgmyers@netscape.com>. r=wtc@netscape.com.